[package]
name = "AoC2020"
version = "0.1.0"
authors = ["Darki <50775247+darkiboi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/bin/aoc/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/aoc/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/aoc/day3.rs"

[dependencies]