[package]
name = "AoC2020"
version = "0.1.0"
authors = ["Darki <50775247+darkiboi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/bin/aoc/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/aoc/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/aoc/day3.rs"

[[bin]]
name = "day4"
path = "src/bin/aoc/day4.rs"

[[bin]]
name = "day5"
path = "src/bin/aoc/day5.rs"

[[bin]]
name = "day6"
path = "src/bin/aoc/day6.rs"

[[bin]]
name = "day7"
path = "src/bin/aoc/day7.rs"

[[bin]]
name = "day8"
path = "src/bin/aoc/day8.rs"

[[bin]]
name = "day9"
path = "src/bin/aoc/day9.rs"

[[bin]]
name = "day10"
path = "src/bin/aoc/day10.rs"

[[bin]]
name = "day11"
path = "src/bin/aoc/day11.rs"

[[bin]]
name = "day12"
path = "src/bin/aoc/day12.rs"

[[bin]]
name = "day13"
path = "src/bin/aoc/day13.rs"

[[bin]]
name = "day14"
path = "src/bin/aoc/day14.rs"


[dependencies]
regex = "1"
linked-hash-map = "0.5.3"